unpackaged/main/default/objects/OrderApi__GL_Account__c/OrderApi__GL_Account__c.object-meta.xml
<CustomObject>
    <description>GL Accounting codes used for linking debits and credits with the appropriate codes.</description>
    <label>GL Account</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>