unpackaged/main/default/objects/OrderApi__GL_Account__c/fields/Is_Test_Data__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test Data</label>
    <type>Checkbox</type>
</CustomField>