unpackaged/main/default/objects/OrderApi__GL_Account__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <description>**Required** Master-Detail Relationship to Business Group.</description>
    <inlineHelpText>**Required** Master-Detail Relationship to Business Group.</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Chart of Accounts</relationshipLabel>
    <relationshipName>GL_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>