unpackaged/main/default/objects/OrderApi__GL_Account__c/fields/OrderApi__Detail__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Detail__c</fullName>
    <description>Customize the detail pick-list to assist you in categorizing the GL Accounts in accounting reports.</description>
    <inlineHelpText>Customize the detail pick-list to assist you in categorizing the GL Accounts in accounting reports.</inlineHelpText>
    <label>Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OrderApi__Report_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Payable (A/P)</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable (A/R)</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Current Liabilities</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Fixed Assets</fullName>
            </value>
            <value>
                <fullName>Long-term Liabilities</fullName>
            </value>
            <value>
                <fullName>Other Assets</fullName>
            </value>
            <value>
                <fullName>Other Current Assets</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Other Income</fullName>
            </value>
            <value>
                <fullName>Cost of Goods Sold</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Other Expense</fullName>
            </value>
            <value>
                <fullName>Contributions/Pledges Receivable</fullName>
            </value>
            <value>
                <fullName>Other Receivables</fullName>
            </value>
            <value>
                <fullName>Direct Contributions</fullName>
            </value>
            <value>
                <fullName>Refunds Payable (R/P)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>