unpackaged/main/default/objects/OrderApi__GL_Account__c/fields/OrderApi__Report_Category__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Report_Category__c</fullName>
    <description>**Do Not Modify Picklist Values** Select the appropriate report category for the GL Account.</description>
    <inlineHelpText>**Do Not Modify Picklist Values** Select the appropriate report category for the GL Account.</inlineHelpText>
    <label>Report Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Balance Sheet</fullName>
                <color>#0B6FCE</color>
                <label>Balance Sheet</label>
            </value>
            <value>
                <fullName>Income Statement</fullName>
                <color>#78C953</color>
                <default>true</default>
                <label>Income Statement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>