unpackaged/main/default/objects/OrderApi__GL_Account__c/fields/OrderApi__Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Type__c</fullName>
    <description>Select the appropriate type for the GL Account.</description>
    <inlineHelpText>Select the appropriate type for the GL Account.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OrderApi__Report_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
                <color>#0B6FCE</color>
                <label>Asset</label>
            </value>
            <value>
                <fullName>Capital</fullName>
                <color>#78C953</color>
                <label>Capital</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold</fullName>
                <color>#E27001</color>
                <label>Cost of Goods Sold</label>
            </value>
            <value>
                <fullName>Equity</fullName>
                <color>#A845DC</color>
                <label>Equity</label>
            </value>
            <value>
                <fullName>Expenses</fullName>
                <color>#F3D904</color>
                <label>Expenses</label>
            </value>
            <value>
                <fullName>Income</fullName>
                <color>#A53711</color>
                <label>Income</label>
            </value>
            <value>
                <fullName>Liability</fullName>
                <color>#66E9BD</color>
                <label>Liability</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>