unpackaged/main/default/objects/OrderApi__GL_Account__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Business_Group__c</columns>
    <columns>OrderApi__Report_Category__c</columns>
    <columns>OrderApi__Type__c</columns>
    <columns>OrderApi__Detail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>